# align-and-segment

./: README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/src/: celery_broker.py  config.py  main.py
backend/src/routes/: alignment.py  segmentation.py
backend/src/services/: validation.py
backend/src/services/segmentation/: segmentation.py
backend/src/tasks/: alignment.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  production.Dockerfile  tsconfig.json
frontend/src/: App.css  App.tsx  FileUpload.tsx  index.css  types.ts
frontend/src/components/: FileInputPair.tsx  FilePicker.tsx  FileRow.tsx  FileRowList.tsx  FileUpload.tsx  Footer.tsx  InfoCard.tsx  NavBar.tsx  Status.tsx
frontend/src/pages/: AlignmentPage.tsx  HomePage.tsx  SegmentationPage.tsx
